@@ -2,6 +2,7 @@ HEAD
 	DEBUG now optional, and off by default.
 	connections now set keep_alive => 1, so that newer iTunes servers don't
 	think we keep sodding off.
+	Merge in Net::DAAP::Client::Auth
 
 0.2  Fri Mar 23 10:01:04 2003
         - can list and fetch songs and playlists
